src/test/resources/invalid/typecheck/If_Scopes.vas
class Main is
    this() is
        if true then
            var a : Integer
        else
            a
        end
    end
end